@@ -6,6 +6,10 @@
 # file to which generator outputs generated event data
 outfile output
 
+# Streams generated by using the expression defined in this file in the
+# generation parameters have this appended to the front of their filenames.
+expression_outfile expr_function
+
 # Files to which functions generated using gaussians are output. 
 # File for gaussians in their raw form (xpos stdev weight). Additional files may
 # be generated when generating functions with gaussians - these files will have
@@ -83,7 +87,7 @@ seed 0
 expression a-(b*sin(alpha*t))
 a 10
 b 5
-alpha 0.1000000000
+alpha 0.6000000000
 
 ################################################################################
 #                          Gaussian Function Generator                         #
